# AndroidLibRaw

./: .gitmodules  README.md  build.gradle  jitpack.yml  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/homesoft/photo/androidlibraw/: MainActivity.kt  MainFragment.kt  SettingsFragment.kt
app/src/main/java/com/homesoft/photo/util/: ImageUtil.java
app/src/main/res/drawable/: baseline_settings_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: bools.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
gradle/wrapper/: gradle-wrapper.properties
libraw/: build.gradle  consumer-rules.pro
libraw/src/main/cpp/: AndroidLibRaw.cpp  AndroidLibRaw.h  CMakeLists.txt  anrdroidraw.cpp  libraw.cpp
libraw/src/main/java/com/homesoft/photo/libraw/: LibRaw.java  LibRaw26.java
